--- a/Code/11_latex_presentation.tex
+++ b/Code/11_latex_presentation.tex
@@ -22,8 +22,7 @@
 
 \AtBeginSection[] % Do nothing for \section*
 {
-\begin{frame}
-\frametitle{Outline}
+\begin{frame}{Outline}
 \tableofcontents[currentsection]
 \end{frame}
 }
