--- a/Code/11_latex_presentation.tex
+++ b/Code/11_latex_presentation.tex
@@ -1,6 +1,8 @@
 \documentclass{beamer}
 \usepackage{graphicx} % Required for inserting images
 
+% Theme and Color variations:
+% https://mpetroff.net/files/beamer-theme-matrix/
 \usetheme{Frankfurt}
 \usecolortheme{crane}
 
